--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   font-size: 15px;
   transition: 0.4s;
   border:solid 1px #CDCDCD;
+  margin-left:20px;
+  margin-right:20px;
 }
 
 .active, .accordion:hover {
