--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .accordion {
-  background-color: #D9E9FB;
+  background-color: #ffffff;
   color: #000000;
   cursor: pointer;
   padding: 18px;
